<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.5.16</version>
        <relativePath/>
    </parent>

    <groupId>com.agentsflex</groupId>
    <artifactId>agents-flex-demo</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <name>Agents-Flex Agent Runtime Showcase</name>

    <properties>
        <java.version>21</java.version>
        <agents-flex.version>2.2.9</agents-flex.version>
    </properties>

    <!-- 统一 eclipse-collections 版本：内嵌 Neo4j 5.26 需要 11.1.0（9.2.0 缺少
         ImmutableByteObjectMapFactory.from 等 API），RogueMemory 传递依赖 9.2.0 会仲裁胜出。
         11.x 对 RogueMemory 用到的 9.x API 保持二进制兼容（子模块测试与恢复路径测试已验证）。 -->
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.eclipse.collections</groupId>
                <artifactId>eclipse-collections</artifactId>
                <version>11.1.0</version>
            </dependency>
            <dependency>
                <groupId>org.eclipse.collections</groupId>
                <artifactId>eclipse-collections-api</artifactId>
                <version>11.1.0</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId>
        </dependency>
        <!-- Ehcache 3 JCache 缓存 -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-cache</artifactId>
        </dependency>
        <!-- Ehcache 3 JCache：JCache 规范未改名（仍是 javax.cache），使用默认（无 classifier）jar。
             不要加 jakarta classifier：那是 jakarta.cache SPI 变体，会导致
             javax.cache.spi.CachingProvider 查找失败、启动即抛异常 -->
        <dependency>
            <groupId>org.ehcache</groupId>
            <artifactId>ehcache</artifactId>
        </dependency>
        <dependency>
            <groupId>javax.cache</groupId>
            <artifactId>cache-api</artifactId>
        </dependency>
        <!-- DuckDB 嵌入式数据库 -->
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-jdbc</artifactId>
        </dependency>
        <!-- 连接池：DuckDB 并发打开同一文件会竞态失败，用单实例池复用连接 -->
        <dependency>
            <groupId>com.zaxxer</groupId>
            <artifactId>HikariCP</artifactId>
        </dependency>
        <dependency>
            <groupId>org.duckdb</groupId>
            <artifactId>duckdb_jdbc</artifactId>
            <version>1.5.5.1</version>
        </dependency>
        <!-- RogueMemory 嵌入式 AI 记忆层：HNSW 向量 + BM25 混合检索，mmap 持久化，零第三方依赖 -->
        <!-- 1.1.7-patch2：本项目子模块 RogueMemory/（源码仓库 bryan31/RogueMap 补丁分支）本地构建，
             修复 Windows 上恢复扫描索引 blob、并发读写 mmap 导致的 JVM 原生崩溃，务必使用本地构建版本 -->
        <dependency>
            <groupId>com.yomahub</groupId>
            <artifactId>roguemap-memory</artifactId>
            <version>1.1.7-patch2</version>
        </dependency>
        <dependency>
            <groupId>com.yomahub</groupId>
            <artifactId>roguemap-embedding</artifactId>
            <version>1.1.7-patch2</version>
        </dependency>
        <!-- 内嵌 Neo4j 图数据库：电力拓扑图谱（5.26 LTS 支持 Java 17/21，slf4j 2.x 与 Boot 3.5 对齐） -->
        <dependency>
            <groupId>org.neo4j</groupId>
            <artifactId>neo4j</artifactId>
            <version>5.26.30</version>
        </dependency>
        <dependency>
            <groupId>com.agentsflex</groupId>
            <artifactId>agents-flex-agent</artifactId>
            <version>${agents-flex.version}</version>
        </dependency>
        <dependency>
            <groupId>com.agentsflex</groupId>
            <artifactId>agents-flex-chat-openai</artifactId>
            <version>${agents-flex.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
                    <mainClass>com.agentsflex.showcase.ShowcaseApplication</mainClass>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
